--- a/NBA/src/index.html
+++ b/NBA/src/index.html
@@ -5,7 +5,7 @@
   <title>SLAM STATS</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favicon_Tavola disegno 1 copia 5.png">
 </head>
 <body>
   <app-root></app-root>
